# Otherengine-TestGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE  README.md
Assets/: Cube.omat  Cube.omesh  Plane.omat  Plane.omesh  Sphere.omat  Sphere.omesh
Config/: Display.json  Engine.json  Input.json
Source/: Main.cpp
Source/Actors/: Asteroid.cpp  Laser.cpp  Ship.cpp  Ship.h
Source/Private/: Main.cpp
Source/Private/Actors/: Asteroid.cpp  Laser.cpp  Ship.cpp
Source/Public/Actors/: Asteroid.h
Source/TestGame/Private/: TestGame.cpp
